@@ -1,4 +1,4 @@
-package com.system.sse.sender.core;
+package com.system.sse.sender.store;
 
 import com.system.sse.sender.model.SseEmitterData;
 import org.springframework.stereotype.Component;
@@ -13,16 +13,16 @@ import java.util.stream.Collectors;
  * - 단일 노드 환경용 (멀티 노드 환경에서는 Redis/Kafka 필요)
  */
 @Component
-public class SseEventStore {
+public class LocalSseEventStore {
 
     private final List<StoredEvent> events = new CopyOnWriteArrayList<>();
     private final int maxSize = 1000; // 버퍼 크기 제한
 
     public void store(String eventId, SseEmitterData data) {
         if (events.size() >= maxSize) {
-            events.remove(0);
+            events.removeFirst();
         }
-        events.add(new StoredEvent(eventId, data, Instant.now().toEpochMilli()));
+        events.add(new StoredEvent(eventId, data, Instant.now()));
     }
 
     public List<SseEmitterData> fetchSince(String lastEventId) {
@@ -33,5 +33,15 @@ public class SseEventStore {
                 .collect(Collectors.toList());
     }
 
-    private record StoredEvent(String id, SseEmitterData data, long timestamp) {}
+    public List<SseEmitterData> fetchBetween(Instant from, Instant to) {
+        if (from == null || to == null || from.isAfter(to)) {
+            return List.of();
+        }
+        return events.stream()
+                .filter(e -> !e.timestamp.isBefore(from) && !e.timestamp.isAfter(to))
+                .map(e -> e.data)
+                .collect(Collectors.toList());
+    }
+
+    private record StoredEvent(String id, SseEmitterData data, Instant  timestamp) {}
 }
